Fri Jan  7 15:40:30 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/socket/socket.c (InitVM_socket): MVM ready.

Thu Jan  6 21:18:25 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/etc/etc.c (InitVM_etc): MVM ready.

Thu Jan  6 21:07:48 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* gc.c (gc_mark_children): weaken the criteria; It may be a bug
	  though.

Thu Jan  6 21:01:11 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (rb_intervm_str): smart clean rewrite.  Same effect.

Wed Jan  5 19:48:02 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* dln.c (dln_load): initial support for MVM-capable extensions.
	  Extensions shall have InitVM_ prefixed initializer function to
	  be required from inside of a VM.  Only the main VM can require
	  old-fashioned extensions.

Wed Jan  5 17:04:41 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* dln.c (global_dln_handles): new global variable.

	* dln.c (Init_dln): new function to initialize above.

	* dmydln.c: ditto.

	* inits.c: ditto.

Wed Dec 22 10:53:03 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y (rb_id2str): intervm strings shall not be returned from
	  this function because they are not ready to be used directly.
	  Wrap them with a shared string.

Tue Dec 21 13:14:06 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_core.h (rb_vm_struct): ref_count is no longer used; VMs
	  cannot live longer than their parent so a VM is now totally
	  handled by its parent.

Mon Dec 20 10:53:01 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* mvm.c: goodbye.

Mon Dec 20 07:15:59 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm_core.h (rb_vm_struct): they are no longer queues

	* thread.c: ditto.

	* vm.c: ditto.

Mon Dec 20 05:46:50 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (rb_vm_send): garbage code eliminated.  Checks are done in
	  the calling function.

	* intervm.c (rb_intervm_wormhole_send): the check.
